Ensure text remains visible during webfont load

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -5,4 +5,8 @@
 @import "actiontext";
 @import "custom";
 
-
+@layer base {
+  @font-face {
+    font-display: swap;
+  }
+}
